--- a/Backend/GymWatch/GymWatch.API/appsettings.Development.json
+++ b/Backend/GymWatch/GymWatch.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GymWatchDb": "Server=(localdb)\\mssqllocaldb;Database=GymWatch;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
