--- a/Backend/GymWatch/GymWatch.Infrastructure/GymWatch.Infrastructure.csproj
+++ b/Backend/GymWatch/GymWatch.Infrastructure/GymWatch.Infrastructure.csproj
@@ -10,4 +10,16 @@
       <ProjectReference Include="..\GymWatch.Core\GymWatch.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
