--- a/Backend/GymWatch/GymWatch.API/appsettings.json
+++ b/Backend/GymWatch/GymWatch.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwt": {
+    "key": "super_secret_key_123!",
+    "issuer": "https://localhost:5000",
+    "expiryMinutes": 60
+  }
 }
