--- a/Backend/GymWatch/GymWatch.Core/GymWatch.Core.csproj
+++ b/Backend/GymWatch/GymWatch.Core/GymWatch.Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\_Common\_Common.csproj" />
+    </ItemGroup>
+
 </Project>
