--- a/Backend/GymWatch/GymWatch.Infrastructure/GymWatch.Infrastructure.csproj
+++ b/Backend/GymWatch/GymWatch.Infrastructure/GymWatch.Infrastructure.csproj
@@ -11,6 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.10.0" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
         <PrivateAssets>all</PrivateAssets>
